--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,4 +1,3 @@
-#.github\workflows\schedule.yml
 on:
   schedule:
   - cron: '0 * * * *'
@@ -9,10 +8,9 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@main
-    - name: Excavator
-      uses: Ash258/Scoop-GithubActions@stable-win
+    - name: Excavate
+      uses: shovel-org/GithubActions@main
       env:
         GITH_EMAIL: ${{ secrets.EMAIL }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SHOVEL: '1'
         SKIP_UPDATED: '1'
