--- a/.github/workflows/excavator.yml
+++ b/.github/workflows/excavator.yml
@@ -1,14 +1,15 @@
 on:
   workflow_dispatch:
   schedule:
-  - cron: '0 * * * *'
+    # run every 4 hours
+    - cron: '20 */4 * * *'
 name: Excavator
 jobs:
   excavate:
-    name: Excavator
+    name: Excavate
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@main
     - name: Excavate
       uses: ScoopInstaller/GithubActions@main
       env:
